--- a/modules/reprotool.model/.settings/org.eclipse.core.resources.prefs
+++ b/modules/reprotool.model/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Mon Mar 07 09:36:12 CET 2011
+#Tue Mar 08 13:57:23 CET 2011
 eclipse.preferences.version=1
-encoding//model/reprotool.model.re.ecore=UTF-8
+encoding//model/reprotool.model.specification.ecore=UTF-8
