--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -40,8 +40,9 @@
          point="org.eclipse.ui.perspectives">
       <perspective
             class="reprotool.ide.ReprotoolIdePerspectiveFactory"
+            icon="src/reprotool/ide/reprotool-web-logo.png"
             id="cz.cuni.mff.reprotool.ide.perspective_reprotool_ide"
-            name="reprotool">
+            name="REPROTOOL">
       </perspective>
    </extension>
    <extension
