--- a/modules/reprotool.model/.settings/org.eclipse.core.resources.prefs
+++ b/modules/reprotool.model/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,4 @@
-#Fri Mar 11 15:32:59 CET 2011
+#Sun Mar 13 13:20:50 CET 2011
 eclipse.preferences.version=1
-encoding//model/reprotool.model.linguistic.ecorediag=UTF-8
 encoding//model/reprotool.model.specification.ecore=UTF-8
-encoding//model/reprotool.model.specification.ecorediag=UTF-8
+encoding//model/reprotool.model.traceability.ecore=UTF-8
