--- a/modules/reprotool.model/plugin.xml
+++ b/modules/reprotool.model/plugin.xml
@@ -13,35 +13,35 @@
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://d3s.mff.cuni.cz/reprotool/model/linguistic"
-            class="reprotool.model.linguistic.ILinguisticPackage"
+            class="reprotool.model.linguistic.LinguisticPackage"
             genModel="model/reprotool.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://d3s.mff.cuni.cz/reprotool/model/specification"
-            class="reprotool.model.specification.ISpecificationPackage"
+            class="reprotool.model.specification.SpecificationPackage"
             genModel="model/reprotool.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://d3s.mff.cuni.cz/reprotool/model/structure/doc"
-            class="reprotool.model.structure.doc.IDocPackage"
+            class="reprotool.model.structure.doc.DocPackage"
             genModel="model/reprotool.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://d3s.mff.cuni.cz/reprotool/model/structure/ast"
-            class="reprotool.model.structure.ast.IAstPackage"
+            class="reprotool.model.structure.ast.AstPackage"
             genModel="model/reprotool.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://d3s.mff.cuni.cz/reprotool/model/comp"
-            class="reprotool.model.comp.ICompPackage"
+            class="reprotool.model.comp.CompPackage"
             genModel="model/reprotool.genmodel"/>
    </extension>
 
