roughly linked UseCaseEditor with UcStepView via ShowStep command

--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -74,6 +74,11 @@
             id="commands.removeActor"
             name="Remove actor">
       </command>
+      <command
+            defaultHandler="reprotool.ide.commands.ShowStep"
+            id="commands.showStep"
+            name="Show step">
+      </command>
    </extension>
 
 </plugin>
