--- a/modules/reprotool.model/.settings/org.eclipse.core.resources.prefs
+++ b/modules/reprotool.model/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,5 @@
-#Sun Mar 13 17:45:35 CET 2011
+#Tue Apr 05 11:05:42 CEST 2011
 eclipse.preferences.version=1
 encoding//model/reprotool.model.specification.ecore=UTF-8
 encoding//model/reprotool.model.specification.ecorediag=UTF-8
-encoding//model/reprotool.model.structure.ecorediag=UTF-8
 encoding//model/reprotool.model.traceability.ecore=UTF-8
