Updating properties pages (mainly directories entry)
Added WordNet class (+ implemented antonyms), it needs:

! Added external stuff !

+ Java WordNet Interface (as .jar into reprotool.ling/lib)
+ WordNet dictionary (37MB)
into /tools/WordNet-3.0

--- a/modules/reprotool.ling/build.properties
+++ b/modules/reprotool.ling/build.properties
@@ -1,4 +1,5 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               lib/edu.mit.jwi_2.1.5_jdk.jar
