--- a/modules/reprotool.ling/build.properties
+++ b/modules/reprotool.ling/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/edu.mit.jwi_2.1.5_jdk.jar
+               lib/edu.mit.jwi_2.1.5_jdk.jar,\
+               lib/mxpost.jar
