views of the Reprotool perspective are now defined in plugin.xml

--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -127,5 +127,86 @@
             class="reprotool.ide.preferences.PreferenceInitializer">
       </initializer>
    </extension>
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="cz.cuni.mff.reprotool.ide.perspective_reprotool_ide">
+         <viewShortcut
+               id="cz.cuni.mff.reprotool.ide.views.view_linguistic_tools">
+         </viewShortcut>
+         <viewShortcut
+               id="cz.cuni.mff.reprotool.ide.view_project">
+         </viewShortcut>
+         <viewShortcut
+               id="cz.cuni.mff.reprotool.ide.view_parsed_tree">
+         </viewShortcut>
+         <viewShortcut
+               id="cz.cuni.mff.reprotool.ide.uc_step_view">
+         </viewShortcut>
+         <perspectiveShortcut
+               id="org.tigris.subversion.subclipse.ui.svnPerspective">
+         </perspectiveShortcut>
+         <perspectiveShortcut
+               id="org.tigris.subversion.subclipse.ui.svnPerspective">
+         </perspectiveShortcut>
+         <view
+               closeable="true"
+               id="org.eclipse.ui.navigator.ProjectExplorer"
+               minimized="false"
+               moveable="true"
+               ratio="0.25"
+               relationship="left"
+               relative="org.eclipse.ui.editorss"
+               visible="true">
+         </view>
+         <view
+               closeable="true"
+               id="org.eclipse.ui.views.PropertySheet"
+               minimized="false"
+               moveable="true"
+               ratio="0.6"
+               relationship="right"
+               relative="org.eclipse.ui.editorss"
+               visible="true">
+         </view>
+         <view
+               closeable="true"
+               id="org.eclipse.ui.views.ProgressView"
+               minimized="false"
+               moveable="true"
+               ratio="0.7"
+               relationship="bottom"
+               relative="org.eclipse.ui.editorss"
+               visible="true">
+         </view>
+         <view
+               closeable="true"
+               id="cz.cuni.mff.reprotool.ide.views.view_linguistic_tools"
+               minimized="false"
+               moveable="true"
+               relationship="stack"
+               relative="org.eclipse.ui.views.ProgressView"
+               visible="true">
+         </view>
+         <view
+               closeable="true"
+               id="cz.cuni.mff.reprotool.ide.uc_step_view"
+               minimized="false"
+               moveable="true"
+               relationship="stack"
+               relative="org.eclipse.ui.views.PropertySheet"
+               visible="true">
+         </view>
+         <view
+               closeable="true"
+               id="cz.cuni.mff.reprotool.ide.view_parsed_tree"
+               minimized="false"
+               moveable="true"
+               relationship="bottom"
+               relative="org.eclipse.ui.views.PropertySheet"
+               visible="true">
+         </view>
+      </perspectiveExtension>
+   </extension>
 
 </plugin>
