- changed linguistic package within the model to match the structure of parse tree from procasor - added preconditions/postconditions

--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -206,6 +206,9 @@
                relative="org.eclipse.ui.views.PropertySheet"
                visible="true">
          </view>
+         <newWizardShortcut
+               id="reprotool.ide.wizard1">
+         </newWizardShortcut>
       </perspectiveExtension>
    </extension>
 
