--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -105,7 +105,7 @@
       </command>
       <command
             defaultHandler="reprotool.ide.commands.DeleteStep"
-            id="commands.deleteStep"
+            id="org.eclipse.ui.edit.delete"
             name="Delete step">
       </command>
       <command
